need to add gui and fix disscontenuity

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@ project(Graphcalc_cmake)
 
 set(CMAKE_CXX_STANDARD 17)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/headers)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/headers ${CMAKE_CURRENT_SOURCE_DIR}/libs/includes)
 
-add_executable(Graphcalc_cmake src/Main.cpp src/IndexBuffer.cpp src/Parser.cpp src/VertexBuffer.cpp src/shader.cpp src/Application.cpp src/glad.c)
+add_executable(Graphcalc_cmake src/Main.cpp src/IndexBuffer.cpp src/Parser.cpp src/VertexBuffer.cpp src/shader.cpp src/Application.cpp libs/glad/glad.c src/FrameBuffer.cpp)
 
 
 
